@@ -18,7 +18,6 @@
 package io.vertigo.datamodel.impl.structure.metrics;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import io.vertigo.core.analytics.metric.Metric;
 import io.vertigo.core.analytics.metric.Metrics;
@@ -48,7 +47,7 @@ public final class StructureMetricsProvider implements Component {
 						.withFeature(dtDefinition.getName())
 						.withValue(Double.valueOf(dtDefinition.getFields().size()))
 						.build())
-				.collect(Collectors.toList());
+				.toList();
 
 	}
 
@@ -62,7 +61,7 @@ public final class StructureMetricsProvider implements Component {
 						.withFeature(dtDefinition.getName())
 						.withValue(countTaskDependencies(dtDefinition))
 						.build())
-				.collect(Collectors.toList());
+				.toList();
 
 	}
 
@@ -76,7 +75,7 @@ public final class StructureMetricsProvider implements Component {
 						.withFeature(smartType.getName())
 						.withValue(countTaskDependencies(smartType))
 						.build())
-				.collect(Collectors.toList());
+				.toList();
 
 	}
 
@@ -90,7 +89,7 @@ public final class StructureMetricsProvider implements Component {
 						.withFeature(smartType.getName())
 						.withValue(countDtDefinitionDependencies(smartType))
 						.build())
-				.collect(Collectors.toList());
+				.toList();
 
 	}
 
