@@ -18,7 +18,6 @@
 package io.vertigo.datastore.task;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import javax.inject.Inject;
 
@@ -203,7 +202,7 @@ public final class TaskEngineProcBatchTest {
 				.withRequest(request)
 				.build();
 
-		final List<Long> superHeroesIds = SuperHeroDataBase.getSuperHeroes().stream().map(superHero -> superHero.getId()).collect(Collectors.toList());
+		final List<Long> superHeroesIds = SuperHeroDataBase.getSuperHeroes().stream().map(superHero -> superHero.getId()).toList();
 
 		final Task task = Task.builder(taskDefinition)
 				.addValue(SUPER_HERO_ID_LIST_IN, superHeroesIds)
