@@ -23,7 +23,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import io.vertigo.datamodel.structure.model.KeyConcept;
 import io.vertigo.datamodel.structure.model.UID;
@@ -64,6 +63,6 @@ public final class MemoryCommentPlugin implements CommentPlugin {
 		return commentsMap.getOrDefault(uid, Collections.emptyList())
 				.stream()
 				.map(this::get)
-				.collect(Collectors.toList());
+				.toList();
 	}
 }
