@@ -19,7 +19,6 @@ package io.vertigo.ui.data.controllers;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import javax.inject.Inject;
 
@@ -87,7 +86,7 @@ public class FileUploadController {
 					}
 					return uiFileInfo;
 				})
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	@PostMapping("/upload")
